syntax = "proto3";
package message;
option  go_package = "pb/";

import "msgtype.proto";

//心跳
message Ping
{
    int64 ClientTime = 1; //客户端时间戳
}

message Pong
{
    int64 ServerTime = 1; //服务器本地时间戳
    int64 ClientTime = 2; //客户端时间戳
}

//登录
message Login
{
    string AppId   = 1;
    string Token   = 2;
    bool   IsDebug = 3;
}

message LoginResult
{
    ERROR_CODE Result   = 1;
    string     RoomId   = 2;
    string     UID      = 3;
    string     NickName = 4;
}

//游戏开始
message PlayStart
{
}

message PlayStartResult
{
    ERROR_CODE Result = 1;
}

//游戏结束
message PlayEnd
{
}

message PlayEndResult
{
    ERROR_CODE Result = 1;
}

//结果上报
message Report
{
    repeated ReportInfo Info = 1;
}

message ReportResult
{
    ERROR_CODE            Result = 1;
    repeated AudienceInfo Info   = 2;
}

//获取周分数排行
message GetScoreRank
{
    int32 TopCount = 1;
}

message GetScoreRankResult
{
    ERROR_CODE        Result = 1;
    repeated Audience Info   = 2;
}

//获取月分数排行
message GetMonthScoreRank
{
    int32 TopCount = 1;
}

message GetMonthScoreRankResult
{
    ERROR_CODE        Result = 1;
    repeated Audience Info   = 2;
}

//新用户推送
message NotifyNewAudience
{
    Audience Audience = 1;
}
//用户行为推送
message NotifyAudienceAction
{
    string OpenId  = 1; //ID
    string Content = 2; //评论
    int32  LikeNum = 3; //点赞数量
    string GiftId  = 4; //礼物ID
    int32  GiftNum = 5; //礼物数量
}

//============结构============

//上报分数信息
message ReportInfo
{
    string                      OpenId = 1;
    int32                       Score  = 2;
    bool                        IsWin  = 3;
    map<string, AudienceCustom> Custom = 4; //自定义信息
}

//观众信息
message Audience
{
    AudienceBasic AudienceBasic = 1; //观众基本信息
    AudienceInfo  AudienceInfo  = 2; //观众详细信息
}

//观众基本信息
message AudienceBasic
{
    string OpenId    = 1; //ID
    string NickName  = 2; //昵称
    string AvatarUrl = 3; //头像url
}

//观众详细信息
message AudienceInfo
{
    string                      OpenId        = 1; //ID
    int32                       Score         = 2; //总分(周)
    int32                       Rank          = 3; //排名(周)
    int32                       MonthScore    = 4; //总分(月)
    int32                       MonthRank     = 5; //排名(月)
    int32                       WinningStreak = 6; //连胜
    map<string, AudienceCustom> Custom        = 7; //自定义信息
}

//观众自定义信息
message AudienceCustom
{
    string Value  = 2; //值
    int32  Expire = 3; //过期时间
}